Code header, need help with banner padding and tag spacing.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 
 <header>
   <div class="banner">
-    <div class="logo"> </div>
+    <div class="logo"> <img src="resources\images\logo-white.png">
       <span>Tortoiseshell Optics</span>
-        <nav>
-          <span>Services</span>
-          <span>Products</span>
-          <span>Contact</span>
-        </nav>
+    </div>
+          <nav>
+            <span>Services</span>
+            <span>Products</span>
+            <span>Contact</span>
+          </nav>
   </div>
   <div class="tag">
     <span>DON'T JUST LOOK, SEE.</span>
   </div>
 </header>
+
+</body>
