--- a/index.html
+++ b/index.html
@@ -24,5 +24,17 @@
     <span>DON'T JUST LOOK, SEE.</span>
   </div>
 </header>
-
+<main>
+  <div class="icon">
+    <div id="icon1"> <img src="resources\images\paper-icon.png">
+      <span>Comprehensive Exams</span>
+    </div>
+    <div id="icon2"> <img src="resources\images\ruler-icon.png">
+      <span>Custom Fittings</span>
+    </div>
+    <div id="icon3"> <img src="resources\images\truck-icon.png">
+      <span>Fast Delivery</span>
+    </div>
+  </div>
+</main>
 </body>
